Eco-test complited

--- a/EcoTEst/Views/Home/About.cshtml
+++ b/EcoTEst/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Екологічний тест</h2>
+<h3>Всі права захищено</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>(насправді ні)</p>
